iOS app gefixt en wijzigingen van databank doorgevoerd

--- a/LekkerLokaalApp/LekkerLokaalApp/Views/LoginPage.xaml
+++ b/LekkerLokaalApp/LekkerLokaalApp/Views/LoginPage.xaml
@@ -18,8 +18,8 @@
 
             <ActivityIndicator x:Name="ActivitySpinner" Color="Red" IsRunning="True" />
 
-            <Label x:Name="Lbl_Username" Text="Vul hier uw gebruikersnaam in:" />
-            <Entry x:Name="Entry_Username" Placeholder="Gebruikersnaam" />
+            <Label x:Name="Lbl_Username" Text="Vul hier uw e-mailadres in:" />
+            <Entry x:Name="Entry_Username" Placeholder="E-mailadres" />
             <Label x:Name="Lbl_Password" Text="Vul hier uw wachtwoord in:" />
             <Entry x:Name="Entry_Password" Placeholder="Wachtwoord" IsPassword="True" />
             <Button x:Name="Btn_SignIn" Text="Meld aan" Clicked="SignInProcedure" />
